--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/convo.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Convo-Chat App</title>
+    <meta http-equiv="Content-Security-Policy" content="script-src 'self' 'unsafe-inline' 'unsafe-eval' https:; object-src 'self'">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono&display=swap" rel="stylesheet">
+    <title>Convo-Chat</title>
   </head>
   <body>
     <div id="root"></div>
